<resources>
    <string name="app_name">WeWell</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_rewards">Rewards</string>
    <string name="preference_file_key">wewell_preference</string>
    <string name="current_user_email">current_user_email</string>
    <string name="current_user_name">current_user_name</string>
    <string name="current_user_id">current_user_id</string>
    <string name="fui_progress_dialog_signing_up">Creating your shiny new account...</string>
    <string name="sign_up">Sign up</string>
    <string name="distance">Distance</string>
    <string name="distance_val">distance_val</string>
    <string name="pace">Pace</string>
    <string name="time">Time</string>
    <string name="startTimeVal">start_time_val</string>
    <string name="calorie">Calorie</string>
    <string name="password_reset">Password Reset</string>
    <string name="send_my_password">Send my password</string>
    <string name="go_back_to_signup">Go back to SignUp</string>
    <string name="email">📧Email</string>
    <string name="login_in" translatable="false"><u>Log In</u></string>
    <string name="sign_up_optional">Don\'t have an account? <u>Sign Up</u></string>
    <string name="log_in_optional">Remember password? <u>Log in</u></string>
</resources>