<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PasswordActivity"
    android:gravity="center_vertical">

  <TextView
      android:id="@+id/textView8"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/password_reset"
      android:textAlignment="center"
      android:textColor="@color/purple_700"
      android:textSize="24sp"
      android:textStyle="bold|italic" />

  <EditText
      android:id="@+id/etUserEmail"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:textSize="18sp" />

  <Button
      android:id="@+id/btnForgotPass"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/send_my_password" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="No records? Go back to sign up"
      android:textAlignment="center"
      android:textColor="@color/purple_700"
      android:textSize="18sp"
      android:textStyle="bold|italic" />

  <Button
      android:id="@+id/buttonGoback"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/go_back_to_signup" />


</LinearLayout>